# AoiJournal

./: .gitignore  Agents.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  ollama.rs  parser.rs  reports.rs
src/components/: NaturalLanguageInput.tsx  ReportView.tsx  Settings.tsx  TransactionForm.tsx  TransactionList.tsx
